--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <h1 id="main">NI IDEA STORE</h1>
   <nav>
     <div>
-      <a href="/public/baseDatos.php" target="marco">TODA LA ROPA</a>
-      <a href="/public/soloBuzos.php" target="marco">SOLO BUZOS</a>
-      <a href="/public/soloNike.php" target="marco">SOLO NIKE</a>
-      <a href="/public/mas500.php" target="marco">+ DE $500</a>
+      <a href="public/baseDatos.php" target="marco">TODA LA ROPA</a>
+      <a href="public/soloBuzos.php" target="marco">SOLO BUZOS</a>
+      <a href="public/soloNike.php" target="marco">SOLO NIKE</a>
+      <a href="public/mas500.php" target="marco">+ DE $500</a>
     </div>
   </nav>
   <div class="frame">
-    <iframe name="marco"></iframe>
+    <iframe src="public/baseDatos.php" name="marco"></iframe>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
